--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "format:check": "prettier -c ."
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-boost": "^0.4.9",
+    "apollo-server-micro": "^3.5.0",
+    "graphql": "^16.1.0",
     "next": "12.0.4",
+    "next-pwa": "^5.4.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "next-pwa": "^5.4.4"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "16.11.11",
@@ -25,8 +29,8 @@
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
     "postcss": "^8.4.4",
-    "tailwindcss": "^2.2.19",
     "prettier": "^2.5.0",
+    "tailwindcss": "^2.2.19",
     "typescript": "4.5.2"
   }
 }
