--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "graphql": "^16.1.0",
     "next": "12.0.4",
     "next-pwa": "^5.4.4",
+    "next-with-apollo": "^5.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
